--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
   }
 
   tools {
-    nodejs 'NodeJS 25'   // ← Nombre correcto de tu instalación
+    nodejs 'NodeJS 25'
   }
 
   environment {
@@ -23,9 +23,13 @@ pipeline {
       steps {
         dir('mi-proyecto-cypress') {
           powershell '''
-            echo "=== Iniciando instalación de dependencias ==="
+            echo "=== Instalando dependencias ==="
             npm install
-            echo "=== npm install finalizado ==="
+
+            echo "=== Instalando binario de Cypress ==="
+            npx cypress install
+
+            echo "=== Instalación completada ==="
           '''
         }
       }
@@ -49,7 +53,6 @@ pipeline {
           powershell '''
             echo "=== Generando reporte HTML ==="
 
-            # Fusionar JSON de mochawesome
             if (Test-Path "cypress/report/.jsons/*.json") {
               npx mochawesome-merge cypress/report/.jsons/*.json > cypress/report/mochawesome.json
               npx marge cypress/report/mochawesome.json --reportDir cypress/report/html
@@ -66,10 +69,8 @@ pipeline {
   post {
     always {
 
-      // 📦 Archivar artefactos (vídeos, screenshots, JSON, HTML…)
       archiveArtifacts artifacts: 'mi-proyecto-cypress/cypress/report/**/*.*', allowEmptyArchive: true
 
-      // 📊 Publicar reporte HTML (parámetros obligatorios incluidos)
       publishHTML([
         reportDir: 'mi-proyecto-cypress/cypress/report/html',
         reportFiles: 'mochawesome.html',
@@ -79,7 +80,6 @@ pipeline {
         alwaysLinkToLastBuild: true
       ])
 
-      // 📈 Publicar resultados JUnit (XML)
       junit 'mi-proyecto-cypress/cypress/results/*.xml'
     }
   }
