--- a/mi-proyecto-cypress/package.json
+++ b/mi-proyecto-cypress/package.json
@@ -3,12 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-
-    "mocha:test": "mocha mocha-tests/**/*.test.js --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=mochawesome",
-    "mocha:merge": "mochawesome-merge mochawesome-report/*.json > mochawesome.json",
-    "mocha:html": "marge mochawesome.json --reportDir mochawesome-html",
-    "mocha:report": "npm run mocha:merge && npm run mocha:html"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +12,6 @@
   "devDependencies": {
     "cypress": "^15.8.2",
     "cypress-mochawesome-reporter": "^3.8.2",
-    "mocha-junit-reporter": "^2.2.1",
-
-    "mocha": "^10.0.0",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.2.1",
-    "marge": "^5.0.0"
+    "mocha-junit-reporter": "^2.2.1"
   }
 }
