--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -1,79 +1,88 @@
 pipeline {
-  agent any
+    agent any
 
-  parameters {
-    string(
-      name: 'TEST_SPEC',
-      defaultValue: 'cypress/e2e/**/*.cy.js',
-      description: 'Ruta del test a ejecutar'
-    )
-  }
+    stages {
 
-  tools {
-    nodejs 'NodeJS 25'
-  }
-
-  environment {
-    CYPRESS_CACHE_FOLDER = "${WORKSPACE}/.cache"
-  }
-
-  stages {
-
-    stage('Instalar dependencias') {
-      steps {
-        dir('mi-proyecto-cypress') {
-          powershell '''
-            echo "=== Instalando dependencias ==="
-            npm install
-
-            echo "=== Instalando binario de Cypress ==="
-            npx cypress install
-          '''
+        stage('Instalar dependencias') {
+            steps {
+                dir('mi-proyecto-cypress') {
+                    powershell '''
+                        npm ci
+                    '''
+                }
+            }
         }
-      }
-    }
 
-    stage('Ejecutar pruebas Cypress') {
-      steps {
-        dir('mi-proyecto-cypress') {
-          powershell '''
-            echo "=== Ejecutando pruebas Cypress ==="
-            npx cypress run --spec "$env:TEST_SPEC"
-          '''
+        stage('Ejecutar Cypress') {
+            steps {
+                dir('mi-proyecto-cypress') {
+                    powershell '''
+                        npx cypress run
+                    '''
+                }
+            }
         }
-      }
-    }
 
-    stage('Generar reporte HTML Mochawesome') {
-      steps {
-        dir('mi-proyecto-cypress') {
-          powershell '''
-            echo "=== Fusionando JSON de Mochawesome ==="
-            npx mochawesome-merge cypress/report/.jsons/*.json -o cypress/report/mochawesome.json
-
-            echo "=== Generando HTML final ==="
-            npx marge cypress/report/mochawesome.json --reportDir cypress/report/html --reportFilename mochawesome.html --inline --overwrite
-          '''
+        stage('Fusionar JSONs Mochawesome') {
+            steps {
+                dir('mi-proyecto-cypress') {
+                    powershell '''
+                        echo "Fusionando JSONs..."
+                        npx mochawesome-merge cypress/report/.jsons/*.json -o cypress/report/mochawesome.json
+                    '''
+                }
+            }
         }
-      }
+
+        stage('Generar HTML Mochawesome') {
+            steps {
+                dir('mi-proyecto-cypress') {
+                    powershell '''
+                        echo "Generando HTML con marge..."
+                        npx marge cypress/report/mochawesome.json --reportDir cypress/report/html --reportFilename mochawesome.html --inline --overwrite
+                    '''
+                }
+            }
+        }
+
+        stage('Diagnóstico artefactos') {
+            steps {
+                dir('mi-proyecto-cypress') {
+                    powershell '''
+                        echo "=== Contenido de cypress/results ==="
+                        dir cypress/results
+
+                        echo "=== Contenido de cypress/report/.jsons ==="
+                        dir cypress/report/.jsons
+
+                        echo "=== Contenido de cypress/report ==="
+                        dir cypress/report
+
+                        echo "=== Contenido de cypress/report/html ==="
+                        dir cypress/report/html
+                    '''
+                }
+            }
+        }
+
+        stage('Publicar reporte HTML') {
+            steps {
+                publishHTML(target: [
+                    reportName: 'Reporte Cypress (Mochawesome)',
+                    reportDir: 'mi-proyecto-cypress/cypress/report/html',
+                    reportFiles: 'mochawesome.html',
+                    keepAll: true,
+                    alwaysLinkToLastBuild: true,
+                    allowMissing: true
+                ])
+            }
+        }
+
     }
-  }
 
-  post {
-    always {
-
-      archiveArtifacts artifacts: 'mi-proyecto-cypress/cypress/report/**/*.*', allowEmptyArchive: true
-
-      publishHTML([
-        reportDir: 'mi-proyecto-cypress/cypress/report/html',
-        reportFiles: 'mochawesome.html',
-        reportName: 'Reporte Cypress (Mochawesome)',
-        keepAll: true,
-        alwaysLinkToLastBuild: true,
-        allowMissing: false
-      ])
-
-      junit 'mi-proyecto-cypress/cypress/results/*.xml'
+    post {
+        always {
+            junit 'mi-proyecto-cypress/cypress/results/*.xml'
+        }
     }
-  }
 }
