--- a/mi-proyecto-cypress/Jenkinsfile
+++ b/mi-proyecto-cypress/Jenkinsfile
@@ -40,10 +40,7 @@ pipeline {
             echo '=== Ejecutando pruebas Cypress ==='
             echo 'TEST_SPEC = ${params.TEST_SPEC}'
 
-            echo '=== Forzando configuración desde línea de comandos ==='
-            npx cypress run ^
-              --config reporter=cypress-mochawesome-reporter,reporterOptions='{\"reportDir\":\"cypress/report\",\"saveHtml\":true,\"embeddedScreenshots\":true,\"inlineAssets\":true,\"charts\":true,\"reportPageTitle\":\"Test-Suite\"}',videosFolder=cypress/report/videos,screenshotsFolder=cypress/report/screenshots ^
-              --spec \"${params.TEST_SPEC}\"
+            npx cypress run --spec "${params.TEST_SPEC}"
           """
         }
       }
